Update the client and added function for Bloom Filter